--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.0.3
 Werkzeug==2.0.3
-openai==1.38.0
+openai>=1.0.0
 sqlalchemy==1.4.25
 python-dotenv==1.0.1
 PyPDF2==3.0.1
@@ -12,3 +12,4 @@ langchain>=0.1.0
 tiktoken
 langchain-openai
 faiss-cpu
+Flask-Limiter>=3.5.0
