Update registry URL and improve connectivity checks

--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -24,8 +24,10 @@ jobs:
       # Debug DNS and connectivity
       - name: Debug connection
         run: |
-          ping -c 4 huggingface.co
-          curl -v https://huggingface.co
+          echo "Testing connectivity..."
+          curl -v https://huggingface.co || true
+          curl -v https://api.huggingface.co || true
+          dig huggingface.co
       
       # Build and push Docker image
       - name: Build and push Docker image
@@ -38,11 +40,11 @@ jobs:
           docker build -t hf-space .
           
           # Login to Hugging Face Container Registry
-          echo $HF_TOKEN | docker login huggingface.co -u $HF_USERNAME --password-stdin
+          echo $HF_TOKEN | docker login https://api.huggingface.co -u $HF_USERNAME --password-stdin
           
           # Tag and push the image
-          docker tag hf-space huggingface.co/spaces/$HF_USERNAME/$SPACE_NAME:latest
-          docker push huggingface.co/spaces/$HF_USERNAME/$SPACE_NAME:latest
+          docker tag hf-space api.huggingface.co/spaces/$HF_USERNAME/$SPACE_NAME:latest
+          docker push api.huggingface.co/spaces/$HF_USERNAME/$SPACE_NAME:latest
       
       # Upload knowledge sources (if needed)
       - name: Upload knowledge sources
