fix readme format

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,6 @@
 *.css text eol=lf
 *.js text eol=lf
 *.json text eol=lf
-*.md text eol=lf 
+*.md text eol=lf
+
+# Explicitly exclude README.md from Git LFS
