--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,14 @@
 Flask==2.0.3
 Werkzeug==2.0.3
-openai>=1.0.0
-sqlalchemy==1.4.25
 python-dotenv==1.0.1
-PyPDF2==3.0.1
 pandas==2.2.0
 scikit-learn==1.5.0
 langchain-core>=0.1.17
 langchain-community>=0.0.13
 langchain>=0.1.0
-tiktoken
-langchain-openai
+numpy>=1.24.0
 faiss-cpu
 Flask-Limiter>=3.5.0
 gradio>=4.19.2
-requests
+requests>=2.32.3
 beautifulsoup4==4.12.2
